# url-list-scraper

./: Cargo.toml  urls.csv
src/: main.rs
