[package]
name = "rust-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.1.0", features = ["client"] }
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
tokio = { version = "1.36.0", features = ["full"] }
url = "2.5.0"
