[package]
name = "rust-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
hyper = { version = "1.1.0", features = ["client"] }
regex = "1.10.3"
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
tokio = { version = "1.36.0", features = ["full"] }
url = "2.5.0"
